--- a/stylebot.css
+++ b/stylebot.css
@@ -61,6 +61,9 @@ div:has(> br:only-child) { display: none; }
     & > div.kCrYT:first-child { /* ? */
         display: flex;
         gap: 1rem;
+        & > * {
+          flex: 1 1 0;
+        }
     }
     /* "About Featured Snippets" */
     .kCrYT > .hfgVwf { display: none; }
